# mixed

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  android_installation_guide.md
src/: app.rs  lib.rs  main.rs
src/audio/: mod.rs  mpv_backend.rs  player.rs  rodio_backend.rs  visualizer.rs  viz_source.rs
src/config/: app_config.rs  mod.rs  session.rs
src/data/: library.rs  lyrics.rs  metadata.rs  playlist.rs
src/sys/: android_media.rs  mod.rs  mpris.rs
src/ui/: artwork.rs  branding.rs  events.rs  layout.rs  lyrics_widget.rs  mod.rs  visualizer_widget.rs
src/utils/: sanitizer.rs
tests/: headless_tests.rs  mpris_dbus.rs
