[package]
name = "mixed"
version = "0.1.0"
edition = "2021"
description = "A next-generation terminal music player written in Rust"
license = "GPL-3.0"

[lib]
name = "mixed"
path = "src/lib.rs"

[[bin]]
name = "mixed"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui-image = { version = "4", features = ["crossterm"] }

# Audio decoding & playback
symphonia = { version = "0.5", features = ["all"] }
rodio = { version = "0.20", default-features = false, features = ["symphonia-all"] }

# DSP / Visualization
rustfft = "6"
crossbeam-channel = "0.5"

# Metadata / Tags
lofty = "0.22"
libc = "0.2"

# Filesystem
walkdir = "2"

# System integration (MPRIS via D-Bus) — Linux only
# zbus, enumflags2, and tokio are declared under the linux target section below

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XDG directories
directories = "6"

# Image processing (cover art)
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Signal handling
ctrlc = "3"

# Fuzzy search
fuzzy-matcher = "0.3"
regex = "1"

# Parallel iterators for library scanning
rayon = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Linux-only: D-Bus/MPRIS stack (not available on Windows, macOS, Android)
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
enumflags2 = "0.7"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
